--- a/Resources/DBruen_notebook.ipynb
+++ b/Resources/DBruen_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -172,7 +174,7 @@
        "4       90    6.9        Joey Cramer   36636  Mark H. Baker  1986  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,6 +189,278 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1986, 1987, 1989, 1988, 1990, 1991, 1992, 1993, 1994, 1995, 1996,\n",
+       "       1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007,\n",
+       "       2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Call unique years\n",
+    "IMDB_df['year'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>budget</th>\n",
+       "      <th>company</th>\n",
+       "      <th>country</th>\n",
+       "      <th>director</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>gross</th>\n",
+       "      <th>name</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>score</th>\n",
+       "      <th>star</th>\n",
+       "      <th>votes</th>\n",
+       "      <th>writer</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>8000000.0</td>\n",
+       "      <td>Columbia Pictures Corporation</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Rob Reiner</td>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>52287414.0</td>\n",
+       "      <td>Stand by Me</td>\n",
+       "      <td>R</td>\n",
+       "      <td>89</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>Wil Wheaton</td>\n",
+       "      <td>299174</td>\n",
+       "      <td>Stephen King</td>\n",
+       "      <td>1986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>6000000.0</td>\n",
+       "      <td>Paramount Pictures</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>John Hughes</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>70136369.0</td>\n",
+       "      <td>Ferris Bueller's Day Off</td>\n",
+       "      <td>PG-13</td>\n",
+       "      <td>103</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>Matthew Broderick</td>\n",
+       "      <td>264740</td>\n",
+       "      <td>John Hughes</td>\n",
+       "      <td>1986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>15000000.0</td>\n",
+       "      <td>Paramount Pictures</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Tony Scott</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>179800601.0</td>\n",
+       "      <td>Top Gun</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>110</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>Tom Cruise</td>\n",
+       "      <td>236909</td>\n",
+       "      <td>Jim Cash</td>\n",
+       "      <td>1986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>18500000.0</td>\n",
+       "      <td>Twentieth Century Fox Film Corporation</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>James Cameron</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>85160248.0</td>\n",
+       "      <td>Aliens</td>\n",
+       "      <td>R</td>\n",
+       "      <td>137</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>Sigourney Weaver</td>\n",
+       "      <td>540152</td>\n",
+       "      <td>James Cameron</td>\n",
+       "      <td>1986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>9000000.0</td>\n",
+       "      <td>Walt Disney Pictures</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Randal Kleiser</td>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>18564613.0</td>\n",
+       "      <td>Flight of the Navigator</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>90</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>Joey Cramer</td>\n",
+       "      <td>36636</td>\n",
+       "      <td>Mark H. Baker</td>\n",
+       "      <td>1986</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       budget                                 company country        director  \\\n",
+       "0   8000000.0           Columbia Pictures Corporation     USA      Rob Reiner   \n",
+       "1   6000000.0                      Paramount Pictures     USA     John Hughes   \n",
+       "2  15000000.0                      Paramount Pictures     USA      Tony Scott   \n",
+       "3  18500000.0  Twentieth Century Fox Film Corporation     USA   James Cameron   \n",
+       "4   9000000.0                    Walt Disney Pictures     USA  Randal Kleiser   \n",
+       "\n",
+       "       genre        gross                      name rating  runtime  score  \\\n",
+       "0  Adventure   52287414.0               Stand by Me      R       89    8.1   \n",
+       "1     Comedy   70136369.0  Ferris Bueller's Day Off  PG-13      103    7.8   \n",
+       "2     Action  179800601.0                   Top Gun     PG      110    6.9   \n",
+       "3     Action   85160248.0                    Aliens      R      137    8.4   \n",
+       "4  Adventure   18564613.0   Flight of the Navigator     PG       90    6.9   \n",
+       "\n",
+       "                star   votes         writer  year  \n",
+       "0        Wil Wheaton  299174   Stephen King  1986  \n",
+       "1  Matthew Broderick  264740    John Hughes  1986  \n",
+       "2         Tom Cruise  236909       Jim Cash  1986  \n",
+       "3   Sigourney Weaver  540152  James Cameron  1986  \n",
+       "4        Joey Cramer   36636  Mark H. Baker  1986  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove the 'released' column from IMDB\n",
+    "clean_imdb = IMDB_df.drop(['released'], axis=1)\n",
+    "clean_imdb.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['budget', 'company', 'country', 'director', 'genre', 'gross', 'name',\n",
+       "       'rating', 'runtime', 'score', 'star', 'votes', 'writer', 'year'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display new columns\n",
+    "clean_imdb.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export the csv\n",
+    "export_imdb_csv = clean_imdb.to_csv(\"clean_imdb.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rds_connection_string = \"postgres:Bayville123!@localhost:5432/movie_db\"\n",
+    "engine = create_engine(f'postgresql://{rds_connection_string}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['imdb']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "engine.table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character in identifier (<ipython-input-30-1cc293ebd626>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-1cc293ebd626>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    pd.read_sql_query(‘select * from imdb’, con=engine).head()\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
+     ]
+    }
+   ],
+   "source": [
+    "pd.read_sql_query(‘select * from imdb’, con=engine).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +603,7 @@
        "4             Shashilal K. Nair     0.0        1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,11 +617,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "budget\n",
+      "company\n",
+      "country\n",
+      "director\n",
+      "genre\n",
+      "gross\n",
+      "name\n",
+      "rating\n",
+      "released\n",
+      "runtime\n",
+      "score\n",
+      "star\n",
+      "votes\n",
+      "writer\n",
+      "year\n"
+     ]
+    }
+   ],
    "source": [
-    "# Transform the IMDB DataFrame"
+    "# List the columns from the IMDB DataFrame\n",
+    "for col in IMDB_df.columns:\n",
+    "    print(col)"
    ]
   },
   {
