--- a/Resources/DBruen_notebook.ipynb
+++ b/Resources/DBruen_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "4       90    6.9        Joey Cramer   36636  Mark H. Baker  1986  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "4             Shashilal K. Nair     0.0        1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -363,13 +363,134 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Bolly_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imdbId</th>\n",
+       "      <th>title</th>\n",
+       "      <th>releaseYear</th>\n",
+       "      <th>hitFlop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>tt0118578</td>\n",
+       "      <td>Albela</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>tt0169102</td>\n",
+       "      <td>Lagaan: Once Upon a Time in India</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>tt0187279</td>\n",
+       "      <td>Meri Biwi Ka Jawab Nahin</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>tt0222024</td>\n",
+       "      <td>Hum Tumhare Hain Sanam</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>tt0227194</td>\n",
+       "      <td>One 2 Ka 4</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      imdbId                              title  releaseYear  hitFlop\n",
+       "0  tt0118578                             Albela         2001        2\n",
+       "1  tt0169102  Lagaan: Once Upon a Time in India         2001        6\n",
+       "2  tt0187279           Meri Biwi Ka Jawab Nahin         2004        1\n",
+       "3  tt0222024             Hum Tumhare Hain Sanam         2002        4\n",
+       "4  tt0227194                         One 2 Ka 4         2001        1"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_Bolly_df = Bolly_df[['imdbId', 'title', 'releaseYear','hitFlop']]\n",
+    "\n",
+    "new_Bolly_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['imdbId', 'title', 'releaseYear', 'hitFlop'], dtype='object')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_Bolly_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "export_csv = new_Bolly_df.to_csv('new_Bollywood_movie.csv',index=False)"
    ]
   },
   {
@@ -381,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,16 +512,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['customer_name', 'customer_location']"
+       "['bollywood_movie']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,12 +532,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imdbId</th>\n",
+       "      <th>title</th>\n",
+       "      <th>releaseYear</th>\n",
+       "      <th>hitFlop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>tt0118578</td>\n",
+       "      <td>Albela</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>tt0169102</td>\n",
+       "      <td>Lagaan: Once Upon a Time in India</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>tt0187279</td>\n",
+       "      <td>Meri Biwi Ka Jawab Nahin</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>tt0222024</td>\n",
+       "      <td>Hum Tumhare Hain Sanam</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>tt0227194</td>\n",
+       "      <td>One 2 Ka 4</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      imdbId                              title releaseYear  hitFlop\n",
+       "0  tt0118578                             Albela        2001        2\n",
+       "1  tt0169102  Lagaan: Once Upon a Time in India        2001        6\n",
+       "2  tt0187279           Meri Biwi Ka Jawab Nahin        2004        1\n",
+       "3  tt0222024             Hum Tumhare Hain Sanam        2002        4\n",
+       "4  tt0227194                         One 2 Ka 4        2001        1"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Transform the Bollywood DataFrame\n",
+    "pd.read_sql_query('select * from bollywood_movie', con=engine).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Transform the Bollywood DataFrame"
-   ]
+   "source": []
   }
  ],
  "metadata": {
