--- a/Resources/DBruen_notebook.ipynb
+++ b/Resources/DBruen_notebook.ipynb
@@ -442,20 +442,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid character in identifier (<ipython-input-30-1cc293ebd626>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-1cc293ebd626>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    pd.read_sql_query(‘select * from imdb’, con=engine).head()\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>budget</th>\n",
+       "      <th>company</th>\n",
+       "      <th>country</th>\n",
+       "      <th>director</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>gross</th>\n",
+       "      <th>name</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>score</th>\n",
+       "      <th>star</th>\n",
+       "      <th>votes</th>\n",
+       "      <th>writer</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [budget, company, country, director, genre, gross, name, rating, runtime, score, star, votes, writer, year]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_sql_query(‘select * from imdb’, con=engine).head()"
+    "pd.read_sql_query('select * from imdb', con=engine).head()"
    ]
   },
   {
