copy code on a new notebook file

--- a/helen_xier_work/Resources/new_bollywood_notebook.ipynb
+++ b/helen_xier_work/Resources/new_bollywood_notebook.ipynb
@@ -37,6 +37,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>budget</th>\n",
        "      <th>company</th>\n",
        "      <th>country</th>\n",
@@ -45,7 +46,6 @@
        "      <th>gross</th>\n",
        "      <th>name</th>\n",
        "      <th>rating</th>\n",
-       "      <th>released</th>\n",
        "      <th>runtime</th>\n",
        "      <th>score</th>\n",
        "      <th>star</th>\n",
@@ -57,6 +57,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>8000000.0</td>\n",
        "      <td>Columbia Pictures Corporation</td>\n",
        "      <td>USA</td>\n",
@@ -65,7 +66,6 @@
        "      <td>52287414.0</td>\n",
        "      <td>Stand by Me</td>\n",
        "      <td>R</td>\n",
-       "      <td>1986-08-22</td>\n",
        "      <td>89</td>\n",
        "      <td>8.1</td>\n",
        "      <td>Wil Wheaton</td>\n",
@@ -75,6 +75,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>6000000.0</td>\n",
        "      <td>Paramount Pictures</td>\n",
        "      <td>USA</td>\n",
@@ -83,7 +84,6 @@
        "      <td>70136369.0</td>\n",
        "      <td>Ferris Bueller's Day Off</td>\n",
        "      <td>PG-13</td>\n",
-       "      <td>1986-06-11</td>\n",
        "      <td>103</td>\n",
        "      <td>7.8</td>\n",
        "      <td>Matthew Broderick</td>\n",
@@ -93,6 +93,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>15000000.0</td>\n",
        "      <td>Paramount Pictures</td>\n",
        "      <td>USA</td>\n",
@@ -101,7 +102,6 @@
        "      <td>179800601.0</td>\n",
        "      <td>Top Gun</td>\n",
        "      <td>PG</td>\n",
-       "      <td>1986-05-16</td>\n",
        "      <td>110</td>\n",
        "      <td>6.9</td>\n",
        "      <td>Tom Cruise</td>\n",
@@ -111,6 +111,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>18500000.0</td>\n",
        "      <td>Twentieth Century Fox Film Corporation</td>\n",
        "      <td>USA</td>\n",
@@ -119,7 +120,6 @@
        "      <td>85160248.0</td>\n",
        "      <td>Aliens</td>\n",
        "      <td>R</td>\n",
-       "      <td>1986-07-18</td>\n",
        "      <td>137</td>\n",
        "      <td>8.4</td>\n",
        "      <td>Sigourney Weaver</td>\n",
@@ -129,6 +129,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "      <td>9000000.0</td>\n",
        "      <td>Walt Disney Pictures</td>\n",
        "      <td>USA</td>\n",
@@ -137,7 +138,6 @@
        "      <td>18564613.0</td>\n",
        "      <td>Flight of the Navigator</td>\n",
        "      <td>PG</td>\n",
-       "      <td>1986-08-01</td>\n",
        "      <td>90</td>\n",
        "      <td>6.9</td>\n",
        "      <td>Joey Cramer</td>\n",
@@ -150,19 +150,19 @@
        "</div>"
       ],
       "text/plain": [
-       "       budget                                 company country        director  \\\n",
-       "0   8000000.0           Columbia Pictures Corporation     USA      Rob Reiner   \n",
-       "1   6000000.0                      Paramount Pictures     USA     John Hughes   \n",
-       "2  15000000.0                      Paramount Pictures     USA      Tony Scott   \n",
-       "3  18500000.0  Twentieth Century Fox Film Corporation     USA   James Cameron   \n",
-       "4   9000000.0                    Walt Disney Pictures     USA  Randal Kleiser   \n",
+       "   Unnamed: 0      budget                                 company country  \\\n",
+       "0           0   8000000.0           Columbia Pictures Corporation     USA   \n",
+       "1           1   6000000.0                      Paramount Pictures     USA   \n",
+       "2           2  15000000.0                      Paramount Pictures     USA   \n",
+       "3           3  18500000.0  Twentieth Century Fox Film Corporation     USA   \n",
+       "4           4   9000000.0                    Walt Disney Pictures     USA   \n",
        "\n",
-       "       genre        gross                      name rating    released  \\\n",
-       "0  Adventure   52287414.0               Stand by Me      R  1986-08-22   \n",
-       "1     Comedy   70136369.0  Ferris Bueller's Day Off  PG-13  1986-06-11   \n",
-       "2     Action  179800601.0                   Top Gun     PG  1986-05-16   \n",
-       "3     Action   85160248.0                    Aliens      R  1986-07-18   \n",
-       "4  Adventure   18564613.0   Flight of the Navigator     PG  1986-08-01   \n",
+       "         director      genre        gross                      name rating  \\\n",
+       "0      Rob Reiner  Adventure   52287414.0               Stand by Me      R   \n",
+       "1     John Hughes     Comedy   70136369.0  Ferris Bueller's Day Off  PG-13   \n",
+       "2      Tony Scott     Action  179800601.0                   Top Gun     PG   \n",
+       "3   James Cameron     Action   85160248.0                    Aliens      R   \n",
+       "4  Randal Kleiser  Adventure   18564613.0   Flight of the Navigator     PG   \n",
        "\n",
        "   runtime  score               star   votes         writer  year  \n",
        "0       89    8.1        Wil Wheaton  299174   Stephen King  1986  \n",
@@ -345,15 +345,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Transform the IMDB DataFrame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -363,7 +354,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +444,7 @@
        "4  tt0227194                         One 2 Ka 4         2001        1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +466,7 @@
        "Index(['imdbId', 'title', 'releaseYear', 'hitFlop'], dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,14 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +505,7 @@
        "['bollywood_movie']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +595,7 @@
        "4  tt0227194                         One 2 Ka 4        2001        1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,6 +604,13 @@
     "# Transform the Bollywood DataFrame\n",
     "pd.read_sql_query('select * from bollywood_movie', con=engine).head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
