delete unreadable notebook

--- a/helen_xier_work/Resources/new_bollywood_notebook.ipynb
+++ b/helen_xier_work/Resources/new_bollywood_notebook.ipynb
@@ -392,7 +392,6 @@
        "      <th>imdbId</th>\n",
        "      <th>title</th>\n",
        "      <th>releaseYear</th>\n",
-       "      <th>hitFlop</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -401,47 +400,42 @@
        "      <td>tt0118578</td>\n",
        "      <td>Albela</td>\n",
        "      <td>2001</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>tt0169102</td>\n",
        "      <td>Lagaan: Once Upon a Time in India</td>\n",
        "      <td>2001</td>\n",
-       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>tt0187279</td>\n",
        "      <td>Meri Biwi Ka Jawab Nahin</td>\n",
        "      <td>2004</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>tt0222024</td>\n",
        "      <td>Hum Tumhare Hain Sanam</td>\n",
        "      <td>2002</td>\n",
-       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>tt0227194</td>\n",
        "      <td>One 2 Ka 4</td>\n",
        "      <td>2001</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      imdbId                              title  releaseYear  hitFlop\n",
-       "0  tt0118578                             Albela         2001        2\n",
-       "1  tt0169102  Lagaan: Once Upon a Time in India         2001        6\n",
-       "2  tt0187279           Meri Biwi Ka Jawab Nahin         2004        1\n",
-       "3  tt0222024             Hum Tumhare Hain Sanam         2002        4\n",
-       "4  tt0227194                         One 2 Ka 4         2001        1"
+       "      imdbId                              title  releaseYear\n",
+       "0  tt0118578                             Albela         2001\n",
+       "1  tt0169102  Lagaan: Once Upon a Time in India         2001\n",
+       "2  tt0187279           Meri Biwi Ka Jawab Nahin         2004\n",
+       "3  tt0222024             Hum Tumhare Hain Sanam         2002\n",
+       "4  tt0227194                         One 2 Ka 4         2001"
       ]
      },
      "execution_count": 5,
@@ -450,7 +444,7 @@
     }
    ],
    "source": [
-    "new_Bolly_df = Bolly_df[['imdbId', 'title', 'releaseYear','hitFlop']]\n",
+    "new_Bolly_df = Bolly_df[['imdbId', 'title', 'releaseYear']]\n",
     "\n",
     "new_Bolly_df.head()"
    ]
@@ -463,7 +457,7 @@
     {
      "data": {
       "text/plain": [
-       "Index(['imdbId', 'title', 'releaseYear', 'hitFlop'], dtype='object')"
+       "Index(['imdbId', 'title', 'releaseYear'], dtype='object')"
       ]
      },
      "execution_count": 6,
@@ -543,7 +537,6 @@
        "      <th>imdbId</th>\n",
        "      <th>title</th>\n",
        "      <th>releaseYear</th>\n",
-       "      <th>hitFlop</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -552,47 +545,42 @@
        "      <td>tt0118578</td>\n",
        "      <td>Albela</td>\n",
        "      <td>2001</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>tt0169102</td>\n",
        "      <td>Lagaan: Once Upon a Time in India</td>\n",
        "      <td>2001</td>\n",
-       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>tt0187279</td>\n",
        "      <td>Meri Biwi Ka Jawab Nahin</td>\n",
        "      <td>2004</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>tt0222024</td>\n",
        "      <td>Hum Tumhare Hain Sanam</td>\n",
        "      <td>2002</td>\n",
-       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>tt0227194</td>\n",
        "      <td>One 2 Ka 4</td>\n",
        "      <td>2001</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      imdbId                              title releaseYear  hitFlop\n",
-       "0  tt0118578                             Albela        2001        2\n",
-       "1  tt0169102  Lagaan: Once Upon a Time in India        2001        6\n",
-       "2  tt0187279           Meri Biwi Ka Jawab Nahin        2004        1\n",
-       "3  tt0222024             Hum Tumhare Hain Sanam        2002        4\n",
-       "4  tt0227194                         One 2 Ka 4        2001        1"
+       "      imdbId                              title releaseYear\n",
+       "0  tt0118578                             Albela        2001\n",
+       "1  tt0169102  Lagaan: Once Upon a Time in India        2001\n",
+       "2  tt0187279           Meri Biwi Ka Jawab Nahin        2004\n",
+       "3  tt0222024             Hum Tumhare Hain Sanam        2002\n",
+       "4  tt0227194                         One 2 Ka 4        2001"
       ]
      },
      "execution_count": 10,
@@ -607,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,9 +615,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Trash_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-550dfd280ebb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnew_Bolly_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m         \u001b[0mrow_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"imdbId\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0mTrash_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m#print(IMDB_id)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Trash_list' is not defined"
+     ]
+    }
+   ],
    "source": [
     "for index, row in new_Bolly_df.iterrows():\n",
     "        row_data = row[\"imdbId\"]\n",
@@ -39152,7 +39152,7 @@
     "        URL= base_URL + api_key + \"&i=\" + id\n",
     "        movie_data= requests.get(URL).json()\n",
     "        responses.append(movie_data)\n",
-    "        pprint(responses)\n",
+    "        pprint(responses) \n",
     "        #to get budget list\n",
     "        #budget_list = [budget for budget in movie_response[\"\"][\"\"]]"
    ]
